p0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p0-namespace
